# CicadaGallery

./: .gitignore  BUILD.md  Cargo.toml  LICENSE  README.ja.md  README.md  THIRD_PARTY_LICENSES.txt  build.rs  build_installer.bat  build_portable.ps1  licenses.txt  settings.json - ショートカット.lnk
.github/workflows/: pages.yml
.history/src/: app_20260108163208.rs  app_20260108165606.rs  database_20260108140523.rs  database_20260108165557.rs  i18n_20260108140523.rs  main_20260108165603.rs  models_20260108165722.rs  models_20260108165755.rs  models_20260108165836.rs  video_player_20260108165053.rs
docs/: CNAME  Gemfile  _config.yml  download.md  faq.md  features.md  index.md  license.md  robots.txt
docs/_layouts/: default.html
docs/en/: download.md  faq.md  features.md  index.md  license.md
ffmpeg/doc/: ffmpeg-all.html  ffmpeg-codecs.html  ffmpeg-filters.html  ffmpeg-formats.html  ffplay-all.html  ffprobe-all.html
installer/: CicadaGallery.iss
mpv/: mpv.com
src/: app.rs  database.rs  i18n.rs  license.rs  main.rs  models.rs  scene_detection.rs  thumbnail.rs  video_player.rs  video_scanner.rs
