[package]
name = "cicada_gallery"
version = "1.0.0"
edition = "2021"
default-run = "cicada_gallery"

[features]
default = []
premium = ["ed25519-dalek", "base64", "hex"]

[dependencies]
# GUI framework
eframe = "0.29"
egui = "0.29"
egui_extras = { version = "0.29", features = ["image"] }

# Image processing for thumbnails
image = "0.25"

# File system operations
walkdir = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# System dialogs
rfd = "0.15"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# ICO file parsing
ico = "0.3"

# Directories
dirs = "5.0"

# File system watching
notify = "6.0"

# Parallel processing
rayon = "1.10"

# SQLite database
rusqlite = { version = "0.31", features = ["bundled"] }

# License verification (premium only)
ed25519-dalek = { version = "2.1", features = ["rand_core"], optional = true }
base64 = { version = "0.22", optional = true }
hex = { version = "0.4", optional = true }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["shellapi", "winuser"] }

[build-dependencies]
winres = "0.1"
